cargo_test.errors
warning: unexpected `cfg` condition name: `fuzzing`
   --> C:\Users\chadm\Projects\age\age-rs\age\src\lib.rs:449:7
    |
449 | #[cfg(fuzzing)]
    |       ^^^^^^^
    |
    = help: expected names are: `docsrs`, `feature`, and `test` and 31 more
    = help: consider using a Cargo feature instead
    = help: or consider adding in `Cargo.toml` the `check-cfg` lint config for the lint:
             [lints.rust]
             unexpected_cfgs = { level = "warn", check-cfg = ['cfg(fuzzing)'] }
    = help: or consider adding `println!("cargo::rustc-check-cfg=cfg(fuzzing)");` to the top of the `build.rs`
    = note: see <https://doc.rust-lang.org/nightly/rustc/check-cfg/cargo-specifics.html> for more information about checking conditional configuration
    = note: `#[warn(unexpected_cfgs)]` on by default

warning: `age` (lib) generated 1 warning
   Compiling age-xwing v0.1.0 (C:\Users\chadm\Projects\age-xwing)
error[E0599]: no method named `clone` found for struct `Stanza` in the current scope
  --> tests\interop_tests.rs:71:29
   |
71 |     let stanza = stanzas[0].clone();
   |                             ^^^^^ method not found in `Stanza`

For more information about this error, try `rustc --explain E0599`.
error: could not compile `age-xwing` (test "interop_tests") due to 1 previous error
